# syslog-ng

./: configure.ac
cmake/: add_tests.cmake
cmake/Modules/: FindZLIB.cmake
contrib/selinux/: syslog_ng.sh
lib/: mainloop.c
lib/secret-storage/: secret-storage.c
modules/http/: CMakeLists.txt  Makefile.am  compression.c  http-curl-compression.c  http-curl-compression.h  http-grammar.ym  http-parser.c  http-worker.c  http-worker.h  http.c  http.h
modules/http/tests/: CMakeLists.txt  Makefile.am  test_compression.c  test_compression_helpers.h  test_http-compression.c
news/: feature-4137.md
tests/: CMakeLists.txt  Makefile.am
tests/copyright/: policy
tests/fuzzing/: CMakeLists.txt  Makefile.am  Readme.md  run_fuzz_test.sh
tests/fuzzing/example-test/: CMakeLists.txt
tests/fuzzing/lib/: CMakeLists.txt  fuzzing_helper.c  fuzzing_helper.h  fuzzing_malloc.c  fuzzing_malloc.h
tests/fuzzing/tests/: CMakeLists.txt
tests/fuzzing/tests/example-test/: CMakeLists.txt
tests/fuzzing/tests/example-test/corpora/: corpus2.txt  corpus3.txt  corpus4.txt
tests/fuzzing/tests/example-test/targets/: example1.c
